--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ backports.zoneinfo==0.2.1
 Django==3.2.12
 djangorestframework==3.13.1
 pytz==2022.1
-sqlparse==0.4.2
+psycopg2-binary==2.9.1
 gunicorn==19.9.0
